--- a/netflix-zuul-api-gateway-server/src/main/resources/application.properties
+++ b/netflix-zuul-api-gateway-server/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 spring.application.name=netflix-zuul-api-gateway-server
-server.port=8766
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+server.port=80
+eureka.client.service-url.defaultZone=https://libapp-eureka.azurewebsites.net/eureka
 
 zuul.routes.auth-service.path=/auth/**
 zuul.routes.auth-service.service-id=user-service
 zuul.routes.auth-service.strip-prefix=false
 zuul.routes.auth-service.sensitive-headers=Cookie,Set-Cookie
+eureka.instance.preferIpAddress=false
+eureka.client.registerWithEureka=true
+eureka.client.fetchRegistry=true
+eureka.instance.hostname=libapp-zuul.azurewebsites.net
