--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 spring.application.name=user-service
 spring.cloud.config.uri=http://localhost:8889/
-server.port=8003
+server.port=80
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=https://libapp-eureka.azurewebsites.net/eureka
 
 spring.datasource.url=jdbc:h2:mem:userdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+eureka.instance.preferIpAddress=false
+eureka.client.registerWithEureka=true
+eureka.client.fetchRegistry=true
+eureka.instance.hostname=libapp-user.azurewebsites.net
